syntax = "proto3";

// package should be matched to the directory which .pb.go file will be placed
package pb;
option go_package = ".;pb";

service CardList {
    rpc GetCardList(Page) returns (VCardList) {}
}

message Page {
    string filterType = 1;
    string filterValue = 2;
    string page = 3;
    string limit = 4;
}

message VCardList {
    repeated VCard vcard = 1;
}

message VCard {
    string cardNo = 1;
    string cardType = 2;
    string nameOnCard = 3;
    string cifName = 4;
    string cif = 5;
    string cardBranch = 6;
    string status = 7;
    string instantNon = 8;
}